Updated role comment.

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 	  		   
 	  <header> <div id="lg-headline">ProjLogo</div> </header>
 	  
-	  <nav role="navigation">
+	  <nav role="navigation"> <!-- adding a comment to commit a change-->
 	   		<ul class="nav">
 				<li><a href="home.html" accesskey="h" title="home page for HTLM5 project"><span class="akey">H</span>ome</a></li>
 				<li><a href="posts.html" accesskey="p" title="archive of older posts"><span class="akey">P</span>osts</a></li>
